{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 14,
  "lineage": "d6fe417e-6677-8522-1df2-8e88eb06285e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "mediawiki_default_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112659297:route-table/rtb-060f60b26fb08a2cc",
            "default_route_table_id": "rtb-060f60b26fb08a2cc",
            "id": "rtb-060f60b26fb08a2cc",
            "owner_id": "471112659297",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07c849d5267108979",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mediawiki-public-rt"
            },
            "tags_all": {
              "Name": "mediawiki-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0169cfe3dce4be580"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.mediawiki_ig",
            "aws_vpc.mediawiki_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "mediawiki_elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0faab3564b8bed63c",
            "associate_with_private_ip": "10.2.11.5",
            "domain": "vpc",
            "id": "eipalloc-0faab3564b8bed63c",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-109-67-75.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.67.75",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Description": "Elastic IP for NAT Gateway",
              "Name": "mediawiki-ngw-elastic-ip"
            },
            "tags_all": {
              "Description": "Elastic IP for NAT Gateway",
              "Name": "mediawiki-ngw-elastic-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mediawiki_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112659297:internet-gateway/igw-07c849d5267108979",
            "id": "igw-07c849d5267108979",
            "owner_id": "471112659297",
            "tags": {
              "Name": "mediawiki-igw"
            },
            "tags_all": {
              "Name": "mediawiki-igw"
            },
            "vpc_id": "vpc-0169cfe3dce4be580"
          },
          "dependencies": [
            "aws_vpc.mediawiki_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mediawiki_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0faab3564b8bed63c",
            "association_id": "eipassoc-03fd297e59f0ed1db",
            "connectivity_type": "public",
            "id": "nat-08c5e9a297099d1b8",
            "network_interface_id": "eni-01dc78f0814a5e585",
            "private_ip": "10.2.1.140",
            "public_ip": "3.109.67.75",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05bff903eca5d6c05",
            "tags": {
              "Name": "mediawiki-ngw"
            },
            "tags_all": {
              "Name": "mediawiki-ngw"
            }
          },
          "dependencies": [
            "aws_eip.mediawiki_elastic-ip",
            "aws_subnet.mediawiki_pub_sub_1",
            "aws_vpc.mediawiki_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "mediawiki_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112659297:route-table/rtb-0fa6ab6ef410420a7",
            "id": "rtb-0fa6ab6ef410420a7",
            "owner_id": "471112659297",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08c5e9a297099d1b8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mediawiki-private-rt"
            },
            "tags_all": {
              "Name": "mediawiki-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0169cfe3dce4be580"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.mediawiki_elastic-ip",
            "aws_nat_gateway.mediawiki_nat_gateway",
            "aws_subnet.mediawiki_pub_sub_1",
            "aws_vpc.mediawiki_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mediawiki_pri_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fb262b1c9313e6b",
            "route_table_id": "rtb-0fa6ab6ef410420a7",
            "subnet_id": "subnet-0a8570f8ba673f327"
          },
          "dependencies": [
            "aws_eip.mediawiki_elastic-ip",
            "aws_nat_gateway.mediawiki_nat_gateway",
            "aws_route_table.mediawiki_private_rt",
            "aws_subnet.mediawiki_pri_sub_1",
            "aws_subnet.mediawiki_pub_sub_1",
            "aws_vpc.mediawiki_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mediawiki_pri_sub_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a1dfb73f2f11999",
            "route_table_id": "rtb-0fa6ab6ef410420a7",
            "subnet_id": "subnet-0e1062680e90e01c8"
          },
          "dependencies": [
            "aws_eip.mediawiki_elastic-ip",
            "aws_nat_gateway.mediawiki_nat_gateway",
            "aws_route_table.mediawiki_private_rt",
            "aws_subnet.mediawiki_pri_sub_2",
            "aws_subnet.mediawiki_pub_sub_1",
            "aws_vpc.mediawiki_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "mediawiki_pub_sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a35055f792b936f",
            "route_table_id": "rtb-060f60b26fb08a2cc",
            "subnet_id": "subnet-05bff903eca5d6c05"
          },
          "dependencies": [
            "aws_default_route_table.mediawiki_default_rt",
            "aws_internet_gateway.mediawiki_ig",
            "aws_subnet.mediawiki_pub_sub_1",
            "aws_vpc.mediawiki_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mediawiki_pri_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112659297:subnet/subnet-0a8570f8ba673f327",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.2.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8570f8ba673f327",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112659297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mediawiki-pri-sub1"
            },
            "tags_all": {
              "Name": "mediawiki-pri-sub1"
            },
            "vpc_id": "vpc-0169cfe3dce4be580"
          },
          "dependencies": [
            "aws_vpc.mediawiki_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mediawiki_pri_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112659297:subnet/subnet-0e1062680e90e01c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.2.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1062680e90e01c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112659297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mediawiki-pri-sub2"
            },
            "tags_all": {
              "Name": "mediawiki-pri-sub2"
            },
            "vpc_id": "vpc-0169cfe3dce4be580"
          },
          "dependencies": [
            "aws_vpc.mediawiki_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mediawiki_pub_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112659297:subnet/subnet-05bff903eca5d6c05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05bff903eca5d6c05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112659297",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mediawiki-pub-sub1"
            },
            "tags_all": {
              "Name": "mediawiki-pub-sub1"
            },
            "vpc_id": "vpc-0169cfe3dce4be580"
          },
          "dependencies": [
            "aws_vpc.mediawiki_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mediawiki_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112659297:vpc/vpc-0169cfe3dce4be580",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0ae9222bbed451986",
            "default_route_table_id": "rtb-060f60b26fb08a2cc",
            "default_security_group_id": "sg-003d3f45d0398d6be",
            "dhcp_options_id": "dopt-046b9b7780aa1398d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0169cfe3dce4be580",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-060f60b26fb08a2cc",
            "owner_id": "471112659297",
            "tags": {
              "Name": "mediawiki-vpc"
            },
            "tags_all": {
              "Name": "mediawiki-vpc"
            }
          }
        }
      ]
    }
  ]
}